[Sync] Fix sync node browser view on sync-internals
This Cl fixes node details view for huge sync entity items which don't fit into screen.

Bug: 1346541
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3782805
Commit-Queue: Rushan Suleymanov <rushans@google.com>
Cr-Commit-Position: refs/heads/main@{#1027727}

--- a/components/sync/driver/resources/sync_node_browser.css
+++ b/components/sync/driver/resources/sync_node_browser.css
@@ -56,6 +56,7 @@
 
 #node-details {
   flex-grow: 1;
+  overflow: auto;
 }
 
 #node-details td {
